--- a/src/user/components/auth/styles.less
+++ b/src/user/components/auth/styles.less
@@ -1,9 +1,8 @@
 :local {
     .mainAuth {
-
-    }
-
-    .authNav {
-
+        width: 400px;
+        margin: 50px auto;
+        background-color: white;
+        box-shadow: 0 1px 4px rgba(0,0,0,.2);
     }
 }
