Up library, form fixes

--- a/src/user/components/login/styles.less
+++ b/src/user/components/login/styles.less
@@ -1,14 +1,10 @@
 :local {
     .form {
-        width: 360px;
+        width: 300px;
         margin: 0 auto;
     }
 
-    .control {
-        width: 360px;
-    }
-
-    .row:not(:last-child) {
-        margin-bottom: 15px;
+    .submit {
+        width: 100%;
     }
 }
